# APS_SO

./: .gitignore  CMakeLists.txt
calibration/: CMakeLists.txt
calibration/src/: camera_calibration.cpp
data/: calib_files.xml  out_camera_data.xml  settings.xml
data/identif/: 2017-07-04-140008.csv  2017-07-04-140233.csv  2017-07-04-140607.csv  2017-07-04-140607.webm  2017-07-04-140613.csv  2017-07-04-140613.webm  2017-07-04-140620.csv  2017-07-04-140620.webm  2017-07-04-140914.csv  2017-07-04-140914.webm  curvas.m  floatingball.slx  simplificado.html  simplificado.slx
data/identif/simplificado_html_files/: image-filelist.mat
identif/: CMakeLists.txt
identif/src/: main_bolinha.cpp
src/: main_bolinha.cpp
teste1/: CMakeLists.txt
teste1/src/: main_bolinha.cpp
teste2/: CMakeLists.txt
teste2/src/: main_bolinha_cuda.cpp
teste3/: CMakeLists.txt  CMakeLists.txt.user.3.2-pre1
teste3/src/: inRange.cu  inRange.cuh  main_bolinha.cpp
teste4/: CMakeLists.txt
teste4 - final/: CMakeLists.txt
teste4 - final/src/: serial.h
teste4/src/: main_bolinha.cpp  main_bolinha.cpp.autosave  serial.cpp
teste_serial/: CMakeLists.txt
teste_serial/src/: serial_main.cpp
